Fix click events on iOS

--- a/modules/web-server/src/main/assets/ahlers/presence/web/server/default.scss
+++ b/modules/web-server/src/main/assets/ahlers/presence/web/server/default.scss
@@ -70,7 +70,7 @@ main.resume {
 }
 
 svg g.experience-brief {
-  opacity: 0;
+  opacity: 0.1;
 }
 
 svg g.experience-brief.revealed {
